--- a/exemplos/index.html
+++ b/exemplos/index.html
@@ -14,6 +14,8 @@
     <button onclick="exibirAlerta()">alerta!</button>
     <button onclick="exibirNome()">capturar nome</button>
 
+    <p>teste</p>
+
     <script src="script.js"></script>
 </body>
 </html>
